# flake-templates

./: .gitignore  README.md  flake.nix
flake-parts/: flake.nix
flake-parts/.github/workflows/: test.yml
flake-parts/modules/: devshell.nix  systems.nix  treefmt-module.nix
python/: .gitignore  flake.nix  main.py  pyproject.toml  treefmt.nix
python/src/hello/: __init__.py  main.py
